input spacing fix

--- a/Dashboard V1.3/assets/css/sign-up-responsive.css
+++ b/Dashboard V1.3/assets/css/sign-up-responsive.css
@@ -19,7 +19,7 @@
     }
 
     input{
-        margin-bottom: 0.5em;
+        margin-bottom: 1.3em;
     }
 
     .sign-up-img{
